# EasyLazy

./: CMakeLists.txt  README.md  TODO.md
examples/: CMakeLists.txt  example_core.cpp  example_range_uniform.cpp  example_view.cpp
include/EasyLazy/: broadcast.hpp  core.hpp  fancy_op.hpp  map.hpp  range.hpp  uniform.hpp  view.hpp
tests/: CMakeLists.txt  draft.cpp  test_broadcast.cpp  test_core.cpp  test_map.cpp  test_range.cpp  test_uniform.cpp
